# lrPymRPC_prj

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
lrPymRPC/: __main__.py
lrPymRPC/proto/: compile_proto.sh  file_service.proto  file_service_pb2.py  file_service_pb2_grpc.py
lrPymRPC/script/: client.py
